# ArXivAI

./: README.md
backend/: agent.py  main.py  model.py  pyproject.toml  rag.py  requirements.txt
backend/tools/: arxivetool.py  getpapers.py  ragtool.py  tempCodeRunnerFile.py
frontend/: README.md  angular.json  index.html  metadata.json  package-lock.json  package.json
frontend/src/: app.component.html  app.component.ts
frontend/src/components/paper-card/: paper-card.component.html  paper-card.component.ts
frontend/src/services/: gemini.service.ts  tempCodeRunnerFile.ts
